--- a/styles.css
+++ b/styles.css
@@ -41,3 +41,9 @@ body {
     grid-column: 1/1;
   }
 }
+@media (min-width: 1000px) {
+  body {
+    max-width: 1000px;
+    margin: 5rem 30%;
+  }
+}
