--- a/src/main.scss
+++ b/src/main.scss
@@ -6,14 +6,20 @@ html {
 }
 
 :root {
-  --background-color: #fff;
-  --dark-color: #3c304a;
-  --foreground-color: #615175;
+  --background-color: hsl(0, 0%, 89%);
+  --dark-color: #000;
+  --foreground-color: #000;
 }
 
 a {
   text-decoration: none;
   font-weight: 400;
+}
+.notready {
+  /* Avoid flash of unrendered content; cleared by JS */
+  /* Don't worry about noscript as this whole thing requires JS */
+  opacity: 0;
+  transition: opacity 100ms ease;
 }
 body {
   display: grid;
@@ -21,10 +27,7 @@ body {
   grid-template-rows: auto auto auto;
   background-color: var(--background-color);
   color: var(--foreground-color);
-  /* Avoid flash of unrendered content; cleared by JS */
-  /* Don't worry about noscript as this whole thing requires JS */
-  opacity: 0;
-  transition: opacity 100ms ease;
+  transition: opacity 100ms ease, background-color 400ms ease;
 }
 footer {
   margin-bottom: 2rem;
@@ -54,25 +57,31 @@ h2 {
   border: solid 1px #0000002b;
 }
 /* Station list separators: border-bottom on all elements except last */
-#station-list-ul li:nth-last-child(1) .station {
+#station-list-ul li:nth-last-child(1) .item {
   border: unset;
 }
-.station {
-  border-bottom: solid 1px #0000002b;
+li.item {
+  font-weight: 700;
+  color: var(--dark-color);
+}
+a.item {
   color: inherit;
+  border-bottom: solid 1px #0000002b;
+  text-decoration: none;
+}
+.item {
   display: flex;
   justify-content: space-between;
   line-height: 2.4;
   margin: 0;
-  text-decoration: none;
 }
-.station :nth-child(2),
-.station :nth-child(3),
-.station :nth-child(4) {
+.item :nth-child(2),
+.item :nth-child(3),
+.item :nth-child(4) {
   text-align: center;
 }
-.station :nth-child(3),
-.station :nth-child(4) {
+.item :nth-child(3),
+.item :nth-child(4) {
   display: none;
 }
 #other-title {
@@ -107,16 +116,16 @@ h2 {
   #station-list {
     grid-column: 1/3;
   }
-  .station :nth-child(1) {
+  .item :nth-child(1) {
     width: 60%;
   }
-  .station :nth-child(2),
-  .station :nth-child(3),
-  .station :nth-child(4) {
+  .item :nth-child(2),
+  .item :nth-child(3),
+  .item :nth-child(4) {
     width: 3rem;
   }
-  .station :nth-child(3),
-  .station :nth-child(4) {
+  .item :nth-child(3),
+  .item :nth-child(4) {
     display: unset;
   }
   footer {
