--- a/src/main.scss
+++ b/src/main.scss
@@ -1,4 +1,5 @@
 @import "status";
+@import "station-list";
 
 html {
   /* Use Inter for now */
@@ -49,41 +50,6 @@ h2 {
   line-height: 1;
   margin: 0;
 }
-#station-list-ul {
-  list-style: none;
-  padding: 0 1rem;
-  border-radius: 4px;
-  box-shadow: 0 0 2rem #0000002b;
-  border: solid 1px #0000002b;
-}
-/* Station list separators: border-bottom on all elements except last */
-#station-list-ul li:nth-last-child(1) .item {
-  border: unset;
-}
-li.item {
-  font-weight: 700;
-  color: var(--dark-color);
-}
-a.item {
-  color: inherit;
-  border-bottom: solid 1px #0000002b;
-  text-decoration: none;
-}
-.item {
-  display: flex;
-  justify-content: space-between;
-  line-height: 2.4;
-  margin: 0;
-}
-.item :nth-child(2),
-.item :nth-child(3),
-.item :nth-child(4) {
-  text-align: center;
-}
-.item :nth-child(3),
-.item :nth-child(4) {
-  display: none;
-}
 #other-title {
   visibility: hidden;
 }
@@ -112,21 +78,6 @@ a.item {
   #other-meta {
     grid-column: 2/2;
     grid-row: 2/2;
-  }
-  #station-list {
-    grid-column: 1/3;
-  }
-  .item :nth-child(1) {
-    width: 60%;
-  }
-  .item :nth-child(2),
-  .item :nth-child(3),
-  .item :nth-child(4) {
-    width: 3rem;
-  }
-  .item :nth-child(3),
-  .item :nth-child(4) {
-    display: unset;
   }
   footer {
     grid-column: 1/1;
