Add a status indicator to the main display as well

--- a/src/status.scss
+++ b/src/status.scss
@@ -1,10 +1,10 @@
 /* 良好 */
 .good {
-  --foreground-color: #66ec65;
+  --foreground-color: #60d060;
 }
 /* 普通 */
 .okay {
-  --foreground-color: hsl(61, 097%, 50%);
+  --foreground-color: #ced02b;
 }
 /* 對敏感族群不健康 */
 .meh {
