--- a/src/main.scss
+++ b/src/main.scss
@@ -32,20 +32,29 @@ body {
 footer {
   margin-bottom: 2rem;
 }
-h2,
 #aqi {
+  font-size: 8rem;
   font-weight: 700;
+  line-height: 1;
+  vertical-align: top;
+  color: inherit;
+  &::after {
+    vertical-align: top;
+    content: "●";
+    margin-left: 0.25rem;
+    font-size: 1rem;
+    color: var(--foreground-color);
+  }
+}
+h2#location {
+  margin: 0;
 }
 #refresh {
 }
 h2 {
+  font-weight: 700;
   font-size: 100%;
   margin: 0 0 0.5rem 0;
-}
-#aqi {
-  font-size: 8rem;
-  line-height: 1;
-  margin: 0;
 }
 #other-title {
   visibility: hidden;
