also reset button font

--- a/src/station-list.scss
+++ b/src/station-list.scss
@@ -3,6 +3,7 @@ div#station-list {
   box-shadow: 0 0 1rem #00000030;
   border-radius: 0.5rem;
   button {
+    font-family: inherit;
     text-align: inherit;
     color: inherit;
     font-size: inherit;
