Style the locate button

--- a/src/aqi.scss
+++ b/src/aqi.scss
@@ -1,3 +1,16 @@
+#locate {
+  position: absolute;
+  right: 1.5rem;
+  bottom: 2rem;
+  border-radius: 50%;
+  padding: 1rem;
+  background: var(--foreground-color);
+  color: var(--background-color);
+  * {
+    vertical-align: middle;
+  }
+}
+
 #aqi {
   font-size: 8rem;
   font-weight: 700;
@@ -17,5 +30,18 @@
   #aqi {
     grid-column: 1/1;
     grid-row: 2/2;
+  }
+  #locate {
+    position: inherit;
+    right: unset;
+    bottom: unset;
+    border-radius: unset;
+    padding: unset;
+    background: inherit;
+    color: inherit;
+    vertical-align: middle;
+    * {
+      vertical-align: initial;
+    }
   }
 }
