--- a/src/station-list.scss
+++ b/src/station-list.scss
@@ -1,5 +1,6 @@
 div#station-list {
   padding: 0.5rem 1rem;
+  margin-bottom: 4rem;
   box-shadow: 0 0 1rem #00000030;
   border-radius: 0.5rem;
   table {
@@ -48,6 +49,7 @@ div#station-list {
 @media (min-width: 650px) {
   div#station-list {
     grid-column: 1/3;
+    margin-bottom: auto;
     tr {
       // & :nth-child(1) {
       //   width: 60%;
