Blue as main color for sky

--- a/src/main.scss
+++ b/src/main.scss
@@ -36,8 +36,8 @@ html {
 }
 
 :root {
-  --background-color: #eae6ee;
-  --foreground-color: #160128;
+  --background-color: #dcebf4;
+  --foreground-color: #052124;
 }
 
 a {
