--- a/src/station-list.scss
+++ b/src/station-list.scss
@@ -3,22 +3,22 @@
   // Padding will push the content out without this
   box-sizing: border-box;
   font-size: inherit;
-  border-radius: 0.5rem;
   border: none;
+  border-radius: 0.25rem;
   box-shadow: 0 0 0.25rem #00000030;
-  transition: box-shadow 250ms ease;
+  transition: box-shadow 200ms ease;
   padding: 0.5rem 0.5rem;
   margin: 0.5rem 0;
   &:focus-visible {
     outline: none;
-    box-shadow: 0 0 0.25rem #00000060;
+    box-shadow: 0 0 0.25rem #00000090;
   }
+  padding: 0.5rem 0.5rem;
+  margin: 0.25rem 0;
 }
 
 div#station-list {
-  padding: 0.5rem 1rem;
   margin-bottom: 4rem;
-  box-shadow: 0 0 1rem #00000030;
   border-radius: 0.5rem;
   table {
     border-collapse: collapse;
